# skate-kbm

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json  play-skate.cmd  play-skate.ps1  skate-kbm.sln  stop-skate.cmd  stop-skate.ps1  tsconfig.json
scripts/: install-vigembus.ps1  package.ps1  patch-powershell-shim.js
src/SkateKbm.Mapper/: Program.cs  SkateKbm.Mapper.csproj
src/cli/: index.ts
src/mapper/: main.rs
